syntax = "proto3";

package interchain_security.ccv.provider.v1;

option go_package = "github.com/cosmos/interchain-security/x/ccv/provider/types";

import "gogoproto/gogo.proto";
import "tendermint/crypto/keys.proto";

message ValidatorPower {
    tendermint.crypto.PublicKey consumer_key = 1;
    int64 power = 2;
}

message AddrList {
    repeated bytes addrs = 1;
}

// ConsumerKeys: chainID | providerAddr -> consumerKey
// ValidatorsByConsumerAddr: chainID | consumerAddr -> providerAddr
// ConsumerAddrsToPrune: chainID | vscID -> List(consumerAddr)

message ConsumerKeyRecord {
    string chain_id = 1;
    bytes provider_addr = 2;
    tendermint.crypto.PublicKey consumer_key = 3;
}

message ValidatorByConsumerAddrRecord {
    string chain_id = 1;
    bytes consumer_addr = 2;
    bytes provider_addr = 3;
}

message ConsumerAddrsToPruneRecord {
    string chain_id = 1;
    uint64 vsc_id = 2;
    repeated bytes addrs = 3;
}

message KeyAssignment {
    repeated ConsumerKeyRecord consumer_keys = 1;
    repeated ValidatorByConsumerAddrRecord validators_by_consumer_addr = 2;
    repeated ConsumerAddrsToPruneRecord consumer_addrs_to_prune = 4;
}